# TriFuseSurv

./: README.md  pyproject.toml
scripts/: build_zip_package.sh  install_env.sh  run_contour_aware_base70gb_100ep.sh  run_contour_aware_cindex_search.sh  run_contour_aware_cindex_search_75gb_30ep.sh  run_contour_aware_cindex_search_75gb_tf24_followup.sh  run_contour_aware_cindex_search_h100.sh  run_contour_aware_meaningful_base_100ep.sh  run_contour_aware_survival_serious.sh  run_v75_tri_h1095_tf24_4fold.sh
scripts/config/: contour_aware_cindex_search_h100.env  contour_aware_survival_serious.env
scripts/lib/: gpu_utils.sh
scripts/preprocessing/: export_swinunetr.sh  make_cv_splits.sh  prepare_opscc_tabular.sh
scripts/survival/: evaluate_oof_cindex.sh  train_contour_aware_survival.sh  train_contour_aware_survival_lora.sh
src/trifusesurv/: __init__.py
src/trifusesurv/models/: __init__.py  lora.py  survival_model.py  swinunetr_backbone_utils.py  swinunetr_shared_roi_token_backbone.py
src/trifusesurv/multimodal_survival/: __init__.py  evaluate_oof_cindex.py  train.py
src/trifusesurv/preprocessing/: __init__.py  export_swinunetr.py  make_cv_splits.py  prepare_opscc_tabular.py
src/trifusesurv/utils/: __init__.py  clinical.py  data.py  radiomics.py  survival.py
